--- a/token/package.json
+++ b/token/package.json
@@ -22,7 +22,11 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/microservices": "^10.3.0",
+    "@nestjs/mongoose": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "mongoose": "^8.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
